--- a/src/content/docs/convenios/reglamento.mdx
+++ b/src/content/docs/convenios/reglamento.mdx
@@ -1758,7 +1758,8 @@ b) Los productores que el 1.º de enero de 1970 tuvieran consolidado uno o los d
 
 VISTOS los textos legales citados y los demás de general aplicación esta Delegación Provincial de Trabajo,
 
-### ACUERDA:
+##### ACUERDA:
+
 Aprobar el Reglamento de Régimen Interior de la Empresa MAHOU, Sociedad Anónima.
 
 Condicionar dicha aprobación a que se introduzcan en el Reglamento las modificaciones señaladas en el segundo Considearndo a, cuyo efecto, en caso de no ser recurrida esta Resolución se considerará modificada de oficio por imperio y en virtud precisamente del presente acto administrativo, incluyéndose la presente Resolución en el texto aprobado a los efectos oportunos.
