--- a/src/content/docs/convenios/reglamento.mdx
+++ b/src/content/docs/convenios/reglamento.mdx
@@ -1428,7 +1428,7 @@ EI total de puestos fijos que constituyen la plantilla de MAHOU, S. A., es el qu
 - Directores de Servicio - 3
 
 Total - 7
-#### Técnicos :
+##### Técnicos :
 - Titulados de Grado Superior - 4
 - Titulados de Grado Medio - 9
 - Jefes de 1.ª - 1
@@ -1437,7 +1437,7 @@ Total - 7
 Total - 27
 
 
-#### Administrativos:
+##### Administrativos:
 - Jefes - 14
 - Oficiales de 1.ª - 13
 - Oficiales de 2.ª - 21
@@ -1445,13 +1445,13 @@ Total - 27
 
 Total - 70
 
-#### Comerciales:
+##### Comerciales:
 - Jefes - 2
 - Inspectores de 2.ª - 16
 
 Total - 18
 
-#### Obreros:
+##### Obreros:
 - Oficiales de 1.ª Jefes Equipo - 26
 - Oficiales de 1.ª - 170
 - Oficiales de 2.ª - 215
@@ -1461,7 +1461,7 @@ Total - 18
 
 Total - 904
 
-#### Subalternos:
+##### Subalternos:
 - Subalternos de 1.ª - 42
 - Subalternos de 2.ª - 16
 - Limpiadoras - 15
