add: legal advice

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -37,5 +37,7 @@ Selecciona tu área de trabajo o convenio específico para ver los detalles. Haz
 ### Contacto y Asistencia
 Si tienes alguna duda o necesitas más información, Comisiones Obreras está a tu disposición. Ponte en contacto con nosotros para cualquier consulta relacionada con los convenios o tu situación laboral.
 
+---
 
-
+### Aviso Legal
+Este sitio web es una iniciativa de Comisiones Obreras para facilitar el acceso a los convenios colectivos de Mahou S.A. No somos responsables de los contenidos de los convenios ni de su interpretación. Si tienes alguna duda sobre los términos y condiciones, te recomendamos que consultes con un asesor legal especializado en derecho laboral.
